# LR_2

./: .gitignore  ArrayTask.cpp  ArrayTask.h  CMakeLists.txt  HashTask.cpp  HashTask.h  Node.h  Set.cpp  Set.h  SetTask.cpp  SetTask.h  Stack.h  StackTask.cpp  StackTask.h  TreeTask.cpp  TreeTask.h  arr.cpp  arr.h  hashMap.cpp  hashMap.h  hashMap_funcs.cpp  list.cpp  list.h  main.cpp
data/: tests.txt  tmp.data
structs_funcs/: arr_funcs.cpp  list_funcs.cpp  list_funcs.h  queue_funcs.h  set_funcs.cpp  set_funcs.h  stack_funcs.cpp  stack_funcs.h
structures/: Set.cpp  Set.h  Stack.h  arr.h  hashMap.cpp  hashMap.h  treeBalanced.cpp  treeBalanced.h
task_2/: CMakeLists.txt  Node.h  Pair.cpp  Pair.h  README.md  Set.cpp  Set.h  Stack.cpp  Stack.h  arr.cpp  arr.data  arr.h  arr_funcs.cpp  arr_funcs.h  generalFuncs.cpp  generalFuncs.h  hashMap.data  hashMap.h  hashMap_funcs.cpp  hashMap_funcs.h  lab_1.h  list.cpp  list.data  list.h  list_funcs.cpp  list_funcs.h  main.cpp  queue.data  queue.h  queue_funcs.cpp  queue_funcs.h  set_funcs.cpp  set_funcs.h  stack.data  stack_funcs.cpp  stack_funcs.h  t_2  tmp.data
task_2/data/: arr.data  list.data
