cmake_minimum_required(VERSION 3.29)
project(LR_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(LR_2
        main.cpp
        StackTask.cpp
        structures/Stack.cpp
        structures/Set.cpp
        structures/list.cpp
        structures/arr.cpp
        structures/Pair.cpp
        structures/hashMap.cpp
        structures/treeBalanced.cpp
        SetTask.cpp
        ArrayTask.cpp
        HashTask.cpp
        TreeTask.cpp
)
